Uploaded image for project: 'Thrift'
  1. Thrift
  2. THRIFT-3462

Cocoa generates Incorrect #import header names

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • None
    • 0.10.0
    • Cocoa - Compiler
    • None

    Description

      If you have a thrift file that includes another thrift file and have a prefixed header set, it won't properly set the name.

      It's a one line fix to concatenate the name and capitalize the header file name...
      https://github.com/apache/thrift/pull/722

      Attachments

        Activity

          People

            jriskin j riskin
            jriskin j riskin
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: