THRIFT-3462 Cocoa generates Incorrect #import header names Client: Cocoa Patch: J. Riskin

This closes #722